--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ repositories {
 }
 
 task deployment(type: Copy) {
-    from war.archivePath
-    into('build/libs')
+	from war.archivePath
+	into('build/libs')
 	rename(/(.+)/, 'audiolicious-cloud.war')
 }
 
@@ -30,6 +30,10 @@ dependencies {
 	compile group: 'org.springframework', name: 'spring-core', version: springVersion
 	compile group: 'org.springframework', name: 'spring-context', version: springVersion
 	compile group: 'org.springframework', name: 'spring-webmvc', version: springVersion
+	
+	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.6.6'
+	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.6.6'
+	compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
 
 	testCompile group: 'junit', name: 'junit', version: '4.+'
 }
