--- a/build.gradle
+++ b/build.gradle
@@ -13,15 +13,16 @@ repositories {
 	mavenCentral()
 }
 
-task deployment(type: Copy) {
+project.ext.finalName = 'audiolicious-cloud.war'
+
+task renameWar(type: Copy) {
 	from war.archivePath
 	into('build/libs')
-	rename(/(.+)/, 'audiolicious-cloud.war')
+	rename(/(.+)/, finalName)
 }
-
-war {
-	name: 'audiolicious-cloudx'
-	archiveName: 'audiolicious-cloudx'
+task deployment(dependsOn: 'renameWar', type: Copy) {
+	from('build/libs/' + finalName)
+	into("$System.env.TOMCAT_HOME/webapps/")
 }
 
 project.ext.springVersion = '3.1.2.RELEASE'
@@ -30,7 +31,7 @@ dependencies {
 	compile group: 'org.springframework', name: 'spring-core', version: springVersion
 	compile group: 'org.springframework', name: 'spring-context', version: springVersion
 	compile group: 'org.springframework', name: 'spring-webmvc', version: springVersion
-	
+
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.6.6'
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.6.6'
 	compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
