--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,22 @@ task deployment(dependsOn: 'renameWar', type: Copy) {
 	into("$System.env.TOMCAT_HOME/webapps/")
 }
 
+sourceSets.test.runtimeClasspath += files("src/main/webapp")
+
 project.ext.springVersion = '3.1.2.RELEASE'
 
 dependencies {
 	compile group: 'org.springframework', name: 'spring-core', version: springVersion
 	compile group: 'org.springframework', name: 'spring-context', version: springVersion
 	compile group: 'org.springframework', name: 'spring-webmvc', version: springVersion
+	compile group: 'org.springframework', name: 'spring-test', version: springVersion
 
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.6.6'
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.6.6'
 	compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
 
 	testCompile group: 'junit', name: 'junit', version: '4.+'
+	testCompile 'org.hamcrest:hamcrest-all:1.3'
+	testCompile 'javax.servlet:javax.servlet-api:3.0.1'
+
 }
