--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
 	<servlet>
 		<servlet-name>audiolicious</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:audiolicious-servlet.xml</param-value>
+		</init-param>
 	</servlet>
 
 	<servlet-mapping>
