--- a/build.gradle
+++ b/build.gradle
@@ -31,14 +31,28 @@ dependencies {
 	compile group: 'org.springframework', name: 'spring-core', version: springVersion
 	compile group: 'org.springframework', name: 'spring-context', version: springVersion
 	compile group: 'org.springframework', name: 'spring-webmvc', version: springVersion
-	compile group: 'org.springframework', name: 'spring-test', version: springVersion
+
+		compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '1.0.4.RELEASE'
+	compile group: 'org.mongodb', name: 'mongo-java-driver', version: '2.9.1'
 
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.6.6'
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.6.6'
 	compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
 
+	testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
 	testCompile group: 'junit', name: 'junit', version: '4.+'
 	testCompile 'org.hamcrest:hamcrest-all:1.3'
 	testCompile 'javax.servlet:servlet-api:2.5'
 	testCompile 'org.springframework:spring-test-mvc:1.0.0.M2'
+}
+
+configurations.all {
+	resolutionStrategy {
+		force group: 'org.springframework', name: 'spring-aop', version: springVersion
+		force group: 'org.springframework', name: 'spring-beans', version: springVersion
+		force group: 'org.springframework', name: 'spring-context', version: springVersion
+		force group: 'org.springframework', name: 'spring-core', version: springVersion
+		force group: 'org.springframework', name: 'spring-expression', version: springVersion
+		force group: 'org.springframework', name: 'spring-tx', version: springVersion
+	}
 }
