--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,9 @@ task deployment(type: Copy) {
 project.ext.springVersion = '3.1.2.RELEASE'
 
 dependencies {
-	compile group: 'org.springframework', name: 'spring-core', version: springVersion
+	compile group: 'org.springframework', name: 'spring-beans', version: springVersion
 	compile group: 'org.springframework', name: 'spring-context', version: springVersion
+	compile group: 'org.springframework', name: 'spring-core', version: springVersion
 	compile group: 'org.springframework', name: 'spring-webmvc', version: springVersion
 
 	compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '1.0.4.RELEASE'
