--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.6.6'
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.6.6'
 	compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
+	
+	compile group: 'org.cloudfoundry', name: 'cloudfoundry-runtime', version: '0.8.2'
 
 	testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
 	testCompile group: 'junit', name: 'junit', version: '4.+'
